Fix fold summary position on small screens

--- a/app/assets/styles/global/_folds.scss
+++ b/app/assets/styles/global/_folds.scss
@@ -138,7 +138,13 @@
   }
 
   .summary {
-    margin: 0 0 0 auto;
+    width: 100%;
+    margin: $global-spacing 0 0 0;
+
+    @include media(medium-up) {
+      width: auto;
+      margin: 0 0 0 auto;
+    }
   }
 }
 
